--- a/assets/base.css
+++ b/assets/base.css
@@ -2252,6 +2252,9 @@ input[type='checkbox'] {
 
 .header > .header__heading-link {
   line-height: 0;
+}
+
+.header > .header__heading-link > h2 {
   color: aqua;
 }
 
