another test css still in header

--- a/assets/base.css
+++ b/assets/base.css
@@ -2254,7 +2254,7 @@ input[type='checkbox'] {
   line-height: 0;
 }
 
-.header > .header__heading-link > h2 {
+.header > .header__heading-link > .h2 {
   color: aqua;
 }
 
