another test css

--- a/assets/base.css
+++ b/assets/base.css
@@ -2254,8 +2254,8 @@ input[type='checkbox'] {
   line-height: 0;
 }
 
-.header > .header__heading-link > .h2 {
-  color: aqua;
+.header > .header__heading-link > span.h2 {
+  background-color: aqua;
 }
 
 .header__heading,
