--- a/assets/base.css
+++ b/assets/base.css
@@ -2274,7 +2274,7 @@ input[type='checkbox'] {
 .header__heading-link .h2 {
   line-height: 1;
   color: rgba(var(--color-foreground), 0.75);
-  background-color: aqua;
+  background-color: lightgreen;
 }
 
 .header__heading-logo {
