test css to dev that will merge to main

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -399,6 +399,10 @@
   margin-bottom: 0;
 }
 
+.banner__heading > span {
+  color: aqua;
+}
+
 .banner__box .banner__heading + * {
   margin-top: 1rem;
 }
